--- a/ePayco/composer.json
+++ b/ePayco/composer.json
@@ -5,10 +5,16 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "composer/package-versions-deprecated": "1.11.99.1",
+        "doctrine/doctrine-bundle": "^1.11",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
+        "doctrine/orm": "^2.7",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.2.*",
+        "symfony/maker-bundle": "^1.29",
+        "symfony/proxy-manager-bridge": "4.2.*",
         "symfony/yaml": "4.2.*"
     },
     "require-dev": {
