--- a/ePayco/composer.json
+++ b/ePayco/composer.json
@@ -9,12 +9,19 @@
         "doctrine/doctrine-bundle": "^1.11",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
+        "firebase/php-jwt": "3.0.0",
+        "symfony/apache-pack": "^1.0",
+        "symfony/asset": "4.2",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.2.*",
+        "symfony/http-foundation": "4.2.*",
         "symfony/maker-bundle": "^1.29",
+        "symfony/property-access": "4.2.*",
         "symfony/proxy-manager-bridge": "4.2.*",
+        "symfony/serializer": "4.2",
+        "symfony/validator": "4.2",
         "symfony/yaml": "4.2.*"
     },
     "require-dev": {
