--- a/ePayco/config/routes.yaml
+++ b/ePayco/config/routes.yaml
@@ -1,3 +1,14 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+#User
+user:
+    path: /user
+    controller: App\Controller\UserController::index
+    methods: [POST]
+
+#Invoice
+invoice:
+    path: /invoice
+    controller: App\Controller\InvoiceController::index
+    methods: [POST]
