setup BD and serializate User class
setup BD and serializate User class

--- a/ePayco/config/routes.yaml
+++ b/ePayco/config/routes.yaml
@@ -5,7 +5,7 @@
 user:
     path: /user
     controller: App\Controller\UserController::index
-    methods: [POST]
+    methods: [POST,GET]
 
 #Invoice
 invoice:
