--- a/ePayco/config/routes.yaml
+++ b/ePayco/config/routes.yaml
@@ -7,6 +7,11 @@ user:
     controller: App\Controller\UserController::index
     methods: [POST,GET]
 
+register:
+    path: /register
+    controller: App\Controller\UserController::create
+    methods: [POST]
+
 #Invoice
 invoice:
     path: /invoice
