--- a/ePayco/config/routes.yaml
+++ b/ePayco/config/routes.yaml
@@ -12,6 +12,16 @@ register:
     controller: App\Controller\UserController::create
     methods: [POST]
 
+login:
+    path: /login
+    controller: App\Controller\UserController::login
+    methods: [POST]
+
+user_edit:
+    path: /user/edit
+    controller: App\Controller\UserController::edit
+    methods: [PUT]
+
 #Invoice
 invoice:
     path: /invoice
